# aug-sdk-demo

./: README.md  pyproject.toml  requirements.txt
src/aug_sdk_demo/: __init__.py  __main__.py
